<resources>
    <string name="app_name">hw5.1.2</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_dot">.</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_div">/</string>
    <string name="button_mult">*</string>
    <string name="button_result">=</string>
    <string name="button_clear">C</string>
    <string name="button_change">+/-</string>
    <string name="button_percent">%</string>
    <string name="text_n">N</string>
    <string name="text_o">O</string>
    <string name="text_v">V</string>
    <string name="text_a">A</string>
    <string name="text_e">E</string>
    <string name="text_l">L</string>
    <string name="text_p">P</string>
    <string name="button_ing">Ing</string>
    <string name="button_mac">MAC</string>
    <string name="button_mu">MU</string>
    <string name="button_mMinus">M-</string>
    <string name="button_mPlus">M+</string>
    <string name="button_gtPlus">GT+</string>
    <string name="button_gtMinus">GT-</string>
    <string name="button_gt">GT</string>
    <string name="button_exp">exp</string>
    <string name="button_log">Log</string>
    <string name="button_mode">MODE</string>
    <string name="button_open">(</string>
    <string name="button_comma">,</string>
    <string name="button_close">)</string>
    <string name="setting">settings</string>
</resources>
