<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ImageViewBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textResult"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/button_0"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textDirection="firstStrong"
            android:textSize="@dimen/maxLetters" />

        <LinearLayout
            android:id="@+id/linerBtnNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textResult"
            android:orientation="vertical"
            android:visibility="visible">


            <LinearLayout
                android:id="@+id/linerBtn6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonSetting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting"
                    android:textAllCaps="true"
                    android:textSize="@dimen/normalLetters" />

                <Button
                    android:id="@+id/buttonMAC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_mac" />

                <Button
                    android:id="@+id/buttonMU"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_mu" />

                <Button
                    android:id="@+id/buttonMminus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_mMinus" />

                <Button
                    android:id="@+id/buttonMplus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_mPlus" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linerBtn5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/buttonGTplus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_gtPlus"
                        android:textSize="@dimen/bigLetters" />

                    <Button
                        android:id="@+id/buttonGTminus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/button_gtMinus"
                        android:textSize="@dimen/bigLetters" />

                    <Button
                        android:id="@+id/buttonGT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_gt"
                        android:textSize="@dimen/bigLetters" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/buttonExp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_exp"
                        android:textSize="@dimen/bigLetters" />

                    <Button
                        android:id="@+id/buttoLog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_log"
                        android:textSize="@dimen/bigLetters" />

                    <Button
                        android:id="@+id/buttonMode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_mode"
                        android:textSize="@dimen/bigLetters" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/buttonOpen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_open"
                        android:textSize="@dimen/bigLetters" />

                    <Button
                        android:id="@+id/buttonComma"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_comma"
                        android:textSize="@dimen/bigLetters" />

                    <Button
                        android:id="@+id/buttonClose"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_close"
                        android:textSize="@dimen/bigLetters" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linerBtnOld"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linerBtnNew"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/linerBtns4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:context=".MainActivity">

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_clear"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="@dimen/lageLetters" />

                <Button
                    android:id="@+id/btnChange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_change"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="@dimen/lageLetters" />

                <Button
                    android:id="@+id/btnPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_percent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="@dimen/lageLetters" />

                <Button
                    android:id="@+id/btnDiv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_div"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="@dimen/lageLetters" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linerBtns3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:context=".MainActivity">

                <Button
                    android:id="@+id/btn7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_7"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/lageLetters" />

                <Button
                    android:id="@+id/btn8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/lageLetters" />

                <Button
                    android:id="@+id/btn9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_9"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/lageLetters" />

                <Button
                    android:id="@+id/btnMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_mult"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="@dimen/lageLetters" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linerBtns2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:context=".MainActivity">

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/lageLetters" />

                <Button
                    android:id="@+id/btn5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/lageLetters" />

                <Button
                    android:id="@+id/btn6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_6"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/lageLetters" />

                <Button
                    android:id="@+id/btnMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_minus"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="@dimen/lageLetters" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linerBtns1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:context=".MainActivity">

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/lageLetters" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/lageLetters" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/lageLetters" />

                <Button
                    android:id="@+id/btnPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_plus"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="@dimen/lageLetters" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linerBtns0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:context=".MainActivity">

                <Button
                    android:id="@+id/btn0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/lageLetters" />

                <Button
                    android:id="@+id/btnDot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_dot"
                    android:textSize="@dimen/lageLetters" />

                <Button
                    android:id="@+id/btnResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_result"
                    android:textSize="@dimen/lageLetters" />

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</FrameLayout>